[package]
name = "multiple_runner"
version = "0.1.0"
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.9"
syn = { version = "1.0.74", features = ["full"] }
rayon = "1.5.1"
tokio = { version = "1.9.0", features = ["sync", "rt"] }
